fix(docs-infra): make hamburger menu non focusable when not visible (#45067)
the header hamburger menu gets removed from the page by moving it
outside the screen, it can however still be accessed via keyboard
navigation, add a visibility hidden to the element to prevent such
behavior

PR Close #45067

--- a/aio/src/styles/1-layouts/top-menu/_top-menu.scss
+++ b/aio/src/styles/1-layouts/top-menu/_top-menu.scss
@@ -34,6 +34,7 @@ mat-toolbar.app-toolbar {
       .hamburger {
         // Hamburger shown on non-marketing pages even on large screens.
         margin: $hamburgerShownMargin;
+        visibility: visible;
       }
     }
   }
@@ -52,6 +53,7 @@ mat-toolbar.app-toolbar {
       // Hamburger hidden by default on large screens.
       // (Will be shown per doc.)
       margin: $hamburgerHiddenMargin;
+      visibility: hidden;
     }
 
     @media (max-width: 480px) {
